[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Name Details.gd" type="Script" id=1]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 1000.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 581.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="EditButt" type="Button" parent="."]
margin_left = 585.0
margin_right = 701.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Edit"

[node name="DeleteButt" type="Button" parent="."]
margin_left = 705.0
margin_right = 821.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Delete"

[node name="PrimaryButt" type="Button" parent="."]
margin_left = 825.0
margin_right = 1000.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Make Primary"

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="EditButt" to="." method="_on_EditButt_pressed"]
[connection signal="pressed" from="DeleteButt" to="." method="_on_DeleteButt_pressed"]
[connection signal="pressed" from="PrimaryButt" to="." method="_on_PrimaryButt_pressed"]
